# allegro4cmake

./: .gitignore  CMakeLists.txt  README.md
include/allegro/internal/: alconfig.h
lib/bcc32/: allegro.def
lib/mingw32/: allegro.def
src/: CMakeLists.txt  testlink.c
src/c/: CMakeLists.txt  ccsprite.c
src/dos/: CMakeLists.txt  dfile.c
src/i386/: CMakeLists.txt
src/misc/: CMakeLists.txt  vbeafex.c
